# 3d-game-sandbox

./: .gitignore  Cargo.toml  build_register.sh  msvc.sh  win.sh
art/: game_example.blend  game_example.blend1
assets/: registry.json
assets/blueprints/: Direct.glb  Player.glb  Testing.glb  Wireframes.glb  With Empty.glb  static.glb
assets/levels/: Export.glb  Export.meta.ron  World.glb  World.meta.ron
assets/materials/: Dots Stroke.glb  Material.001.glb  Material.002.glb  Material.003.glb  Material.004.glb  Material.005.glb  Material.006.glb  Material.007.glb  Material.glb  PlayerColor.glb  PlayerMat.glb
src/: character_controller.rs  main.rs
src/character_controller/: mod.rs
src/core/: mod.rs
