[package]
name = "game_example"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.1"
bevy_rapier3d = { version = "0.28.0", features = [ "simd-stable", "debug-render-3d" ] }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
