[package]
name = "game_example"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.1"
bevy = "0.14"
bevy_rapier3d = { version = "0.28.0", features = [ "simd-stable", "debug-render-3d" ] }
blenvy = "0.1.0-alpha.1"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
