[package]
name = "game_example"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = { version = "0.2", default-features = true, features = ["serialize"] }
bevy-inspector-egui = "0.28.1"
bevy_third_person_camera = "0.2.0"
blenvy = { git = "https://github.com/ptsd/blenvy", branch = "blenvy-bevy-0.15" }

[dependencies.bevy]
version = "0.15.1"
features = [
 "wayland",
]

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

